# python-project-52

./: Makefile  README.md  manage.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/auth/: forms.py  views.py
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/static/css/: task.css
task_manager/status/: apps.py  forms.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  apps.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_remove_tasks_status_tasks_status.py  0003_alter_tasks_status.py  0004_tasks_labels.py  0005_alter_tasks_labels.py  0006_alter_tasks_labels.py  0007_rename_maker_tasks_executor_alter_tasks_description_and_more.py
task_manager/templates/: index.html
task_manager/templates/base_template/: base_delete.html  form.html  index.html  login.html  users.html
task_manager/templates/label_template/: label_delete.html  label_update.html  labels.html
task_manager/user/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+21 files in other folders)
