[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    'asgiref==3.8.1',
    "django>=4.2,<5.0",
    'dotenv==0.9.9',
    'gunicorn==23.0.0',
    'packaging==25.0',
    'python-dotenv==1.1.0',
    'sqlparse==0.5.3',
    'typing_extensions==4.14.0',
    'django-bootstrap5==25.1',
    'django-filter==25.1',
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "autopep8>=2.3.2",
    "psycopg==3.2.9",
    "rollbar>=1.3.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.setuptools]
packages = ["task_manager"]

[tool.uv.sources]
hexlet-code = { workspace = true }

[dependency-groups]
dev = [
    "hexlet-code",
]
